11_ec2.tf
## add ec2 
/*
data "aws_ami" "Son_ami" {
    most_recent = true

    filter {
      name = "name"
      values = ["amaz-ami-hvm-*-x86_64-gp2"]
    }
    filter {
        name = "name"
        values = ["hvm"]
    }

    owners = ["amazon"]
}
*/

resource "aws_instance" "Son_web" {
    ami = "ami-04e8dfc09b22389ad"
    instance_type = "t2.micro"
    key_name      = "Son2-key"
    vpc_security_group_ids = [aws_security_group.Son_sg.id]
    availability_zone      = "ap-northeast-2a"
    private_ip             = "10.0.0.11"
    user_data              = file("../../intall.sh")
    subnet_id               = aws_subnet.Son_puba.id
  
}

resource "aws_eip" "Son_eip" {
  vpc = true
  instance = aws_instance.Son_web.id
  associate_with_private_ip = "10.0.0.11"
  depends_on = [
    aws_internet_gateway.Son_ig
  ]
  tags = {
      Name = "Son_web"
  }
}
