13_albt.tf

## add target group
## target_type : Default instance 

resource "aws_lb_target_group" "Son_target" {
    name = "Son-target"
    port = 80
    protocol = "HTTP"
    target_type = "instance"
    vpc_id = aws_vpc.Son-vpc.id

    health_check {
      enabled = true
      healthy_threshold = 3
      interval = 5
      matcher = "200"
      path = "/index.html"
      port = "traffic-port"
      protocol = "HTTP"
      timeout = 2
      unhealthy_threshold = 2

    }

}
